run formatter